Change mosquitto users to be a dict and not a list

--- a/roles/mosquitto/templates/password_shell.j2
+++ b/roles/mosquitto/templates/password_shell.j2
@@ -1,1 +1,1 @@
-{{ mosquitto_pass_base }}{% for user in mosquitto_config.users %} && mosquitto_passwd -b /config/users.passwd {{ user.username }} {{ user.password }}{% endfor -%}'
+{{ mosquitto_pass_base }}{% for user, values in mosquitto_config.users.items() %} && mosquitto_passwd -b /config/users.passwd {{ user }} {{ values.password }}{% endfor -%}'
