--- a/roles/mosquitto/templates/mosquitto.conf.j2
+++ b/roles/mosquitto/templates/mosquitto.conf.j2
@@ -1,3 +1,3 @@
 listener 1883
-allow_anonymous {{ mosquitto_config.allow_anonymous | string | lower }}
+allow_anonymous {{ mosquitto_config.allow_anonymous | to_json }}
 password_file /mosquitto/config/users.passwd
