--- a/roles/zigbee2mqtt/templates/configuration.yml.j2
+++ b/roles/zigbee2mqtt/templates/configuration.yml.j2
@@ -1,5 +1,5 @@
 # Home Assistant integration (MQTT discovery)
-homeassistant: {{ 'hass' in role_names | string | lower }} 
+homeassistant: {{ 'hass' in role_names | to_json }} 
 
 # allow new devices to join
 permit_join: false 
@@ -9,12 +9,14 @@ mqtt:
   base_topic: zigbee2mqtt
   server: 'mqtt://mosquitto'
   user: 'mqtt_user'
-  password: {{ mosquitto_config.mqtt_user.password }}
+  password: {{ mosquitto_config.users.mqtt_user.password }}
 
 # Serial settings
 serial:
   # Location of CC2531 USB sniffer
   port: /dev/zigbee
+
+frontend: {{ zigbee2mqtt_config.frontend_enabled | to_json }}
 
 advanced:
   log_level: info
