--- a/roles/zigbee2mqtt/templates/configuration.yml.j2
+++ b/roles/zigbee2mqtt/templates/configuration.yml.j2
@@ -1,5 +1,5 @@
 # Home Assistant integration (MQTT discovery)
-homeassistant: {{ 'hass' in role_names | to_json }} 
+homeassistant: {{ 'hass_config' is defined | to_json }} 
 
 # allow new devices to join
 permit_join: false 
