Implement passwords for zwavejs2mqtt role, enforce auth

--- a/roles/zwavejs2mqtt/templates/settings.json.j2
+++ b/roles/zwavejs2mqtt/templates/settings.json.j2
@@ -20,7 +20,7 @@
   "gateway": {
     "type": 0,
     "plugins": [],
-    "authEnabled": false,
+    "authEnabled": true,
     "payloadType": 0,
     "nodeNames": true,
     "hassDiscovery": true,
