fix incorrect looping using 0 instead of i as index & rename zwavejs hashed passwords variable to avoid conflict

--- a/roles/zwavejs2mqtt/templates/users.json.j2
+++ b/roles/zwavejs2mqtt/templates/users.json.j2
@@ -2,7 +2,7 @@
   {% for i in range(zwavejs2mqtt_config.users|length) %}
     {
         "username": "{{ zwavejs2mqtt_config.users[i].user }}",
-        "passwordHash": "{{ hashed_passwords.results[0].stdout }}"
+        "passwordHash": "{{ zwavejs2mqtt_hashed_passwords.results[i].stdout }}"
     }{{ "," if not loop.last else "" }}
   {% endfor %}
 ]
