--- a/roles/hass/templates/configuration.yml.j2
+++ b/roles/hass/templates/configuration.yml.j2
@@ -20,6 +20,10 @@ http:
 {% for ip_address in ansible_facts.all_ipv4_addresses %}
     - {{ ip_address }}
 {% endfor %}
+{% for ip_address in hass_config.additional_proxies %}
+    - {{ ip_address }}
+{% endfor %}
+
 
 mqtt:
     broker: mosquitto
